# CryptoDIP

./: .gitignore  CMakeLists.txt  README.md  imageWrite.h  main2.cpp  simple_bus.h  simple_bus_arbiter_if.h  simple_bus_communication.cpp  simple_bus_communication.h  simple_bus_encryption.cpp  simple_bus_encryption.h  simple_bus_gpu.cpp  simple_bus_gpu.h  simple_bus_main.cpp  simple_bus_master_com.cpp  simple_bus_master_com.h  simple_bus_master_direct.cpp  simple_bus_master_direct.h  simple_bus_master_gerad.cpp  simple_bus_master_gerad.h  simple_bus_test.h
environment/: Dockerfile  initilize.run  interface.h
generator/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  generator  generator.cpp  generator.h  main2.h  ouput.txt  output.txt  output_e.txt  test.txt  teste.txt
generator/resourses/: output_d.txt  output_packets_ok.txt  output_test_crypt_with_size.txt
scripts/: docker-build-environment.sh  redeclare.sh  run-env.sh
src/: CMakeLists.txt  simple_bus_arbiter.cpp  simple_bus_communication.cpp  simple_bus_direct_if.h  simple_bus_encryption.cpp  simple_bus_encryption.h  simple_bus_fast_mem.h  simple_bus_gpu.cpp  simple_bus_gpu.h  simple_bus_main.cpp  simple_bus_master_com.cpp  simple_bus_master_com.h  simple_bus_master_direct.cpp  simple_bus_master_gerad.cpp  simple_bus_master_gerad.h  simple_bus_test.h
src/resources/: output (cópia).txt  output.txt
